REFINE: enhance link styles in paragraphs and update image URLs in 404 template

--- a/templates/404.html
+++ b/templates/404.html
@@ -3,7 +3,7 @@
 <!-- wp:group {"tagName":"main","metadata":{"name":"Main"},"className":"serinity-main","layout":{"type":"flex","orientation":"vertical","justifyContent":"center"}} -->
 <main class="wp-block-group serinity-main"><!-- wp:group {"tagName":"section","metadata":{"name":"Section"},"className":"serinity-404","style":{"spacing":{"blockGap":"var:preset|spacing|medium"}},"layout":{"type":"flex","orientation":"vertical","justifyContent":"center"}} -->
 <section class="wp-block-group serinity-404"><!-- wp:image {"width":"auto","height":"400px","aspectRatio":"4/3","scale":"cover","sizeSlug":"large","linkDestination":"none","align":"center","className":"is-style-rounded","style":{"border":{"width":"6px","color":"#faf8f6"}}} -->
-<figure class="wp-block-image aligncenter size-large is-resized has-custom-border is-style-rounded"><img src="http://localhost:8080/wp-content/uploads/2025/03/zoltan-tasi-yanhwFwyoaU-unsplash-683x1024.jpg" alt="" class="has-border-color " style="border-color:#faf8f6;border-width:6px;aspect-ratio:4/3;object-fit:cover;width:auto;height:400px"/></figure>
+<figure class="wp-block-image aligncenter size-large is-resized has-custom-border is-style-rounded"><img src="https://dev-cat-wp.marseaud.fr/wp-content/uploads/2025/03/zoltan-tasi-yanhwFwyoaU-unsplash-683x1024.jpg" alt="" class="has-border-color " style="border-color:#faf8f6;border-width:6px;aspect-ratio:4/3;object-fit:cover;width:auto;height:400px"/></figure>
 <!-- /wp:image -->
 
 <!-- wp:heading {"textAlign":"center","fontSize":"serinity-3xl"} -->
@@ -30,11 +30,11 @@
 <!-- /wp:button -->
 
 <!-- wp:button -->
-<div class="wp-block-button"><a class="wp-block-button__link wp-element-button" href="http://localhost:8080/sample-page/">Découvrir mes programmes</a></div>
+<div class="wp-block-button"><a class="wp-block-button__link wp-element-button" href="https://dev-cat-wp.marseaud.fr/sample-page/">Découvrir mes programmes</a></div>
 <!-- /wp:button -->
 
 <!-- wp:button -->
-<div class="wp-block-button"><a class="wp-block-button__link wp-element-button" href="http://localhost:8080/me-contacter/">Me contacter</a></div>
+<div class="wp-block-button"><a class="wp-block-button__link wp-element-button" href="https://dev-cat-wp.marseaud.fr/me-contacter/">Me contacter</a></div>
 <!-- /wp:button --></div>
 <!-- /wp:buttons --></section>
 <!-- /wp:group --></main>
