--- a/src/scss/serinity.scss
+++ b/src/scss/serinity.scss
@@ -14,6 +14,15 @@
   pointer-events: none;
 }
 
+p > a {
+  color: var(--wp--preset--color--rose-sombre);
+  text-decoration: underline;
+  transition: color 0.3s ease;
+  &:hover {
+    opacity: 0.8;
+  }
+}
+
 .serinity-screen-reader-text {
   border: 0;
   clip: rect(1px, 1px, 1px, 1px);
